--- a/proposal/project_proposal.tex
+++ b/proposal/project_proposal.tex
@@ -1,4 +1,6 @@
 \documentclass[conference]{IEEEtran}
+\usepackage{enumitem}
+\usepackage{cite}
 
 \title{Processor Optimization for Machine Learning Applications}
 
@@ -52,4 +54,8 @@ osowatzke@arizona.edu}}
 \begin{document}
     
 	\maketitle
+	\nocite{riscv_vector_processor_perotti}
+	\nocite{cnn_vector_processor_rajeshwari}
+	\bibliography{sources}{}
+    \bibliographystyle{ieeetr}
 \end{document}
