Update_sources.bib_paper_added_Ayush

--- a/proposal/sources.bib
+++ b/proposal/sources.bib
@@ -22,5 +22,17 @@
   keywords={Computer architecture;Vectors;Internet;Vector processors;Artificial intelligence;Edge computing;Vector processor;Dadda multiplier;CNN unit;Parallelism and pipelining;Custom instructions},
   doi={10.1109/ICAAIC60222.2024.10574964}}
 
+  @INPROCEEDINGS{9407137,
+  author={Sethumurugan, Subhash and Yin, Jieming and Sartori, John},
+  booktitle={2021 IEEE International Symposium on High-Performance Computer Architecture (HPCA)}, 
+  title={Designing a Cost-Effective Cache Replacement Policy using Machine Learning}, 
+  year={2021},
+  volume={},
+  number={},
+  pages={291-303},
+  keywords={Training;System performance;Neural networks;Process control;Computer architecture;Reinforcement learning;Tools},
+  doi={10.1109/HPCA51647.2021.00033}}
+
+
 
 \end{thebibliography}
