paper_Source_2_added_AB

--- a/proposal/sources.bib
+++ b/proposal/sources.bib
@@ -33,6 +33,13 @@
   keywords={Training;System performance;Neural networks;Process control;Computer architecture;Reinforcement learning;Tools},
   doi={10.1109/HPCA51647.2021.00033}}
 
-
+@inproceedings{louis2019towards,
+  title={Towards deep learning using tensorflow lite on risc-v},
+  author={Louis, Marcia Sahaya and Azad, Zahra and Delshadtehrani, Leila and Gupta, Suyog and Warden, Pete and Reddi, Vijay Janapa and Joshi, Ajay},
+  booktitle={Third Workshop on Computer Architecture Research with RISC-V (CARRV)},
+  volume={1},
+  pages={6},
+  year={2019}
+}
 
 \end{thebibliography}
