Adding citations to proposal

--- a/proposal/project_proposal.tex
+++ b/proposal/project_proposal.tex
@@ -54,8 +54,10 @@ osowatzke@arizona.edu}}
 \begin{document}
     
 	\maketitle
+	\nocite{tensorflow_riscv_louis}
 	\nocite{riscv_vector_processor_perotti}
 	\nocite{cnn_vector_processor_rajeshwari}
+	\nocite{cache_replacement_with_ml_sethumurugan}
 	\bibliography{sources}{}
     \bibliographystyle{ieeetr}
 \end{document}
