--- a/proposal/sources.bib
+++ b/proposal/sources.bib
@@ -22,7 +22,7 @@
   keywords={Computer architecture;Vectors;Internet;Vector processors;Artificial intelligence;Edge computing;Vector processor;Dadda multiplier;CNN unit;Parallelism and pipelining;Custom instructions},
   doi={10.1109/ICAAIC60222.2024.10574964}}
 
-  @INPROCEEDINGS{9407137,
+  @INPROCEEDINGS{cache_replacement_with_ml_sethumurugan,
   author={Sethumurugan, Subhash and Yin, Jieming and Sartori, John},
   booktitle={2021 IEEE International Symposium on High-Performance Computer Architecture (HPCA)}, 
   title={Designing a Cost-Effective Cache Replacement Policy using Machine Learning}, 
@@ -33,7 +33,7 @@
   keywords={Training;System performance;Neural networks;Process control;Computer architecture;Reinforcement learning;Tools},
   doi={10.1109/HPCA51647.2021.00033}}
 
-@inproceedings{louis2019towards,
+@inproceedings{tensorflow_riscv_louis,
   title={Towards deep learning using tensorflow lite on risc-v},
   author={Louis, Marcia Sahaya and Azad, Zahra and Delshadtehrani, Leila and Gupta, Suyog and Warden, Pete and Reddi, Vijay Janapa and Joshi, Ajay},
   booktitle={Third Workshop on Computer Architecture Research with RISC-V (CARRV)},
