--- a/proposal/project_proposal.tex
+++ b/proposal/project_proposal.tex
@@ -54,10 +54,15 @@ osowatzke@arizona.edu}}
 \begin{document}
     
 	\maketitle
+	\nocite{riscv_vector_accelerator_arrow}
+	\nocite{learning_memory_access_patterns_hashemi}
+	\nocite{riscv_cache_attack_le}
 	\nocite{tensorflow_riscv_louis}
 	\nocite{riscv_vector_processor_perotti}
 	\nocite{cnn_vector_processor_rajeshwari}
 	\nocite{cache_replacement_with_ml_sethumurugan}
+	\nocite{cache_optimization_waqas}
+	\nocite{optimizing_memory_access_paterns_zheng}
 	\bibliography{sources}{}
     \bibliographystyle{ieeetr}
 \end{document}
