--- a/proposal/sources.bib
+++ b/proposal/sources.bib
@@ -42,4 +42,61 @@
   year={2019}
 }
 
+@article{cache_optimization_waqas,
+author = {Waqas, Muhammad and Shah, Munam},
+year = {2015},
+month = {04},
+pages = {414-418},
+title = {Cache Memory: An Analysis on Optimization Techniques},
+volume = {4},
+journal = {International Journal of Computer and Information Technology}
+}
+
+@misc{optimizing_memory_access_paterns_zheng,
+      title={Optimizing Memory-Access Patterns for Deep Learning Accelerators}, 
+      author={Hongbin Zheng and Sejong Oh and Huiqing Wang and Preston Briggs and Jiading Gai and Animesh Jain and Yizhi Liu and Rich Heaton and Randy Huang and Yida Wang},
+      year={2020},
+      eprint={2002.12798},
+      archivePrefix={arXiv},
+      primaryClass={cs.PF},
+      url={https://arxiv.org/abs/2002.12798}, 
+}
+
+
+@InProceedings{learning_memory_access_patterns_hashemi,
+  title = 	 {Learning Memory Access Patterns},
+  author =       {Hashemi, Milad and Swersky, Kevin and Smith, Jamie and Ayers, Grant and Litz, Heiner and Chang, Jichuan and Kozyrakis, Christos and Ranganathan, Parthasarathy},
+  booktitle = 	 {Proceedings of the 35th International Conference on Machine Learning},
+  pages = 	 {1919--1928},
+  year = 	 {2018},
+  editor = 	 {Dy, Jennifer and Krause, Andreas},
+  volume = 	 {80},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {10--15 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v80/hashemi18a/hashemi18a.pdf},
+}
+
+@ARTICLE{riscv_cache_attack_le,
+  author={Le, Anh-Tien and Hoang, Trong-Thuc and Dao, Ba-Anh and Tsukamoto, Akira and Suzaki, Kuniyasu and Pham, Cong-Kha},
+  journal={IEEE Access}, 
+  title={A Real-Time Cache Side-Channel Attack Detection System on RISC-V Out-of-Order Processor}, 
+  year={2021},
+  volume={9},
+  number={},
+  pages={164597-164612},
+  keywords={Hardware;Computer architecture;Out of order;Side-channel attacks;Real-time systems;Monitoring;Machine learning;RISC-V;spectre;side-channel attack;machine learning;cache memory;hardware performance counters;real-time;software;security},
+  doi={10.1109/ACCESS.2021.3134256}
+}
+  
+@misc{riscv_vector_accelerator_arrow,
+      title={Arrow: A RISC-V Vector Accelerator for Machine Learning Inference}, 
+      author={Imad Al Assir and Mohamad El Iskandarani and Hadi Rayan Al Sandid and Mazen A. R. Saghir},
+      year={2021},
+      eprint={2107.07169},
+      archivePrefix={arXiv},
+      primaryClass={cs.AR},
+      url={https://arxiv.org/abs/2107.07169}, 
+}
+ 
 \end{thebibliography}
